--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,16 @@ environment:
 
 dependencies:
   dotenv: ^4.2.0
+  file_picker: ^8.3.2
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  form_builder: ^1.0.1
+  form_builder_file_picker: ^4.2.0
   http: ^1.3.0
   huggingface_dart: ^0.0.2
+  image_picker: ^1.1.2
+  shared_preferences: ^2.5.2
   speech_to_text: ^7.0.0
 
 dev_dependencies:
